RESOLVED FIXED22585
Compilation failure in PluginPackageWin.cpp on MinGW/Win
https://bugs.webkit.org/show_bug.cgi?id=22585
Summary Compilation failure in PluginPackageWin.cpp on MinGW/Win
Laszlo Gombos
Reported 2008-12-01 19:02:02 PST
..\..\..\webkit\WebCore\plugins\win\PluginPackageWin.cpp: In member function `bool WebCore::PluginPackage::fetchInfo()': ..\..\..\webkit\WebCore\plugins\win\PluginPackageWin.cpp:165: error: invalid conversion from `const UChar*' to `WCHAR*' ..\..\..\webkit\WebCore\plugins\win\PluginPackageWin.cpp:165: error: initializing argument 1 of `DWORD GetFileVersionI nfoSizeW(WCHAR*, DWORD*)' ..\..\..\webkit\WebCore\plugins\win\PluginPackageWin.cpp:171: error: invalid conversion from `const UChar*' to `WCHAR*' ..\..\..\webkit\WebCore\plugins\win\PluginPackageWin.cpp:171: error: initializing argument 1 of `BOOL GetFileVersionIn foW(WCHAR*, DWORD, DWORD, void*)' mingw32-make[2]: *** [tmp/PluginPackageWin.o] Error 1
Attachments
Fix (1.61 KB, patch)
2008-12-01 19:04 PST, Laszlo Gombos
vestbo: review+
Laszlo Gombos
Comment 1 2008-12-01 19:04:10 PST
Created attachment 25652 [details] Fix Cast away const.
Tor Arne Vestbø
Comment 2 2008-12-02 08:03:55 PST
Comment on attachment 25652 [details] Fix Thanks! Landed in r38903
Note You need to log in before you can comment on or make changes to this bug.