2008-12-01 Laszlo Gombos <laszlo.1.gombos@nokia.com>

Reviewed by Tor Arne Vestbø.

        MinGW compilation fix for PluginPackageWin.cpp

        https://bugs.webkit.org/show_bug.cgi?id=22585

Canonical link: https://commits.webkit.org/31110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38903 268f45cc-cd09-0410-ab3c-d52691b4dbfc